<resources>
    <string name="app_name">VaxHub</string>
    <string name="vaxcare">VaxCare</string>
    <string name="vaxcare_lower">vaxcare</string>
    <string name="leak_canary_display_activity_label">VaxHub Leaks</string>
    <string name="debug_version">%1$s/Version: %2$d/Name: %3$s </string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="user_menu">User Menu</string>
    <string name="no_location">No Location</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="header_patient_checkout_label">Patient</string>
    <string name="install">Install</string>
    <string name="button_ok">OK</string>
    <string name="button_go_back">Go Back</string>
    <string name="button_back">Back</string>
    <string name="button_save">Save</string>
    <string name="button_stay_here">Stay Here</string>
    <string name="button_logout">Logout</string>
    <string name="button_close">Close</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_cancel_changes">Clear All</string>
    <string name="button_continue">Continue</string>
    <string name="button_submit">Submit</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="product">Product</string>
    <string name="presentation">Presentation</string>
    <string name="expiration">Expiration</string>
    <string name="invalid_expiration_date">Invalid expiration date</string>
    <string name="partner_id">Partner Id</string>
    <string name="clinic_id">Clinic Id</string>
    <string name="payer">Payer</string>
    <string name="onHandOrders">Orders</string>
    <string name="onHandFlu">Flu</string>
    <string name="onHandNonFlu">Non-Flu</string>
    <string name="antigen">Antigen</string>
    <string name="_99">-99</string>
    <string name="vaccine">VACCINE</string>
    <string name="on_hand">ON HAND</string>
    <string name="total_doses_in_fridge">(Total Doses in Fridge)</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="sync_users">Syncing all Hub users</string>
    <string name="_100_percent">100%</string>
    <string name="not_applicable">N/A</string>
    <string name="required">Required</string>
    <string name="month_placeholder">MM</string>
    <string name="day_placeholder">DD</string>
    <string name="year_placeholder">YYYY</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="got_it">Got It</string>
    <string name="go_to_network_settings">Go To Network Settings</string>
    <string name="internet_reconnected">Internet Reconnected</string>
    <string name="vaxcare_reconnected">VaxCare Reconnected</string>
    <string name="internet_connection_lost">Internet Connection Lost</string>
    <string name="vaxcare_connection_lost">VaxCare Connection Lost</string>
    <string name="taking_a_few_more_seconds">Taking a few more seconds...</string>
    <string name="splash_text_morning">Good Morning!</string>
    <string name="splash_text_afternoon">Good Afternoon!</string>
    <string name="splash_text_after_hours">Good Evening!</string>
    <string name="vaxcare_connection_big_start_count">A connection to VaxCare is required to start an Inventory Count.  We are attempting to re-establish the connection.  You will be able to start Inventory Count when VaxCare reconnects.</string>
    <string name="vaxcare_connection_big_start_transaction">A connection to VaxCare is required to start an Inventory Transaction.  We are attempting to re-establish the connection.  You will be able to start Inventory Transaction when VaxCare reconnects.</string>
    <string name="vaxcare_connection_big_submit_count">A connection to VaxCare is required to submit Inventory Count.  We are attempting to re-establish the connection.  Your progress will not be lost.</string>
    <string name="vaxcare_connection_big_submit_transaction">A connection to VaxCare is required to submit an Inventory Transaction.  We are attempting to re-establish the connection.  Your progress will not be lost.</string>
    <string name="vaxcare_connection_lost_small">The VaxCare connection has been lost. Attempting to re-establish the connection. Your progress will not be lost.</string>
    <string name="vaxcare_reconnected_small">You have been reconnected to VaxCare.</string>
    <string name="internet_connection_big_start_count">An Internet connection is required to start an Inventory Count.  We are attempting to re-establish the connection.  You can go to Network Settings to resolve the issues manually.</string>
    <string name="internet_connection_big_start_transaction">An Internet connection is required to start an Inventory Transaction.  We are attempting to re-establish the connection.  You can go to Network Settings to resolve the issues manually.</string>
    <string name="internet_connection_big_submit_count">An Internet connection is required to submit an Inventory Count.  We are attempting to re-establish the connection.  You can go to Network Settings to resolve the issues manually.  Your progress will not be lost.</string>
    <string name="internet_connection_big_submit_transaction">An Internet connection is required to submit an Inventory Transaction.  We are attempting to re-establish the connection.  You can go to Network Settings to resolve the issues manually.  Your progress will not be lost.</string>
    <string name="internet_reconnected_small">The Internet has now been reconnected.</string>
    <string name="internet_connection_small">The Internet connection has been lost.  Attempting to re-establish the connection.  Tap to view or edit Network Settings.</string>
    <string name="continue_session">Continue Session</string>
    <string name="log_out_flavor_text">This session is about to expire due to inactivity. </string>
    <string name="log_out_flavor_text_timer">You will be logged out in %1$d seconds. </string>
    <string name="inactive_session">Inactive Session - Logging Out</string>
    <string name="patient_checkout_header_remove_dose">Remove Dose from Checkout</string>
    <string name="patient_checkout_body_remove_dose">You are about to remove a dose from the checkout. Are you sure you want to remove the following dose?</string>
    <string name="patient_checkout_keep_dose">Keep Dose in Checkout</string>
    <string name="patient_checkout_remove_dose">Remove Dose</string>
    <string name="add_new_lot_number">Add Lot #</string>
    <string name="confirm_lot">Confirm Lot #</string>
    <string name="add_vaccine_confirmation">In order to add this Lot #, you need to select the vaccine</string>
    <string name="select_vaccine_for_lot">Select the vaccine for this new Lot #:</string>
    <string name="add_expiration_date">EXPIRATION</string>
    <string name="add_new_lot">Add New Lot #</string>
    <string name="add_new_lot_sub_title">Add New Lot #</string>
    <string name="lot_number_placeholder">Lot Number</string>
    <string name="select_antigen_header">ANTIGEN</string>
    <string name="select_antigen_placeholder">Select Antigen</string>
    <string name="select_product_header">PRODUCT</string>
    <string name="select_product_placeholder">Select Product</string>
    <string name="select_presentation_header">PRESENTATION</string>
    <string name="select_presentation_placeholder">Select Presentation</string>
    <string name="select_expiration_month_placeholder">SELECT EXPIRATION MONTH</string>
    <string name="select_expiration_day_placeholder">SELECT EXPIRATION DAY</string>
    <string name="select_expiration_year_placeholder">SELECT EXPIRATION YEAR</string>
    <string name="scanned_dose_issue_header">Issue(s) Detected</string>
    <string name="scanned_dose_issue_body">The following issues have been detected with the scanned dose:</string>
    <string name="scanned_dose_issue_keep_dose">Keep Dose</string>
    <string name="scanned_dose_issue_remove_dose">Remove</string>
    <string name="scanned_dose_expired_header">Expired Dose</string>
    <string name="scanned_dose_expired_body">The scanned dose is expired.</string>
    <string name="scanned_dose_age_issue_header">Out of Age Indication</string>
    <string name="scanned_dose_age_issue_body">The scanned dose is out of age indication for this patient.</string>
    <string name="scanned_dose_multiple_entries_header">Multiple Entries</string>
    <string name="scanned_dose_multiple_entries_body">There are multiple entries of one or more products.</string>
    <string name="scanned_dose_not_flu_header">Patient can only receive flu</string>
    <string name="scanned_dose_not_flu_body">At this time, only flu products are supported for patients added via the Mobile Hub.</string>
    <string name="scanned_dose_missing_info_header">Missing Patient Info</string>
    <string name="scanned_dose_missing_lot_number_header">Missing Lot Number</string>
    <string name="scanned_dose_missing_lot_number_body">The product does not have a lot number. Please remove the dose and ensure you are scanning doses using the valid barcode from the vial or the syringe.</string>
    <string name="scanned_dose_duplicate_lot_number_header">Missing Lot Number</string>
    <string name="scanned_dose_duplicate_lot_number_body">The product does not have a lot number. Please remove the dose and ensure you are scanning doses using the valid barcode from the vial or the syringe.</string>
    <string name="scanned_dose_duplicate_product_header">Duplicate Product</string>
    <string name="scanned_dose_duplicate_product_body">This product has already been scanned. Scan a different product for this patient.</string>
    <string name="scanned_dose_unknown_product_header">Unknown Product</string>
    <string name="patient_already_checkout_body">You can view this appointment in the VaxCare Portal.</string>
    <string name="patient_already_checkout_ok">OK</string>
    <string name="patient_already_checkout_header">Patient has been Checked Out</string>
    <string name="curbside_patient_add_date_of_birth">DATE OF BIRTH *</string>
    <string name="patient_add_valid_date">Enter a valid date</string>
    <string name="covid_assist_not_enrolled_title">Not Enrolled In COVID Assist</string>
    <string name="covid_assist_not_enrolled_body">We are unable to add these as your practice is not currently enrolled in VaxCare\'s COVID Assist program.\nPlease contact Customer Care by calling 888.829.8550 to enroll.</string>
    <string name="covid_assist_not_enrolled_back">Back</string>
    <string name="covid_assist_not_enrolled_cancel">Cancel</string>
    <string name="patient_checkout_prompt_exclusion_title">Doses Not Covered</string>
    <string name="patient_checkout_base_exclusion_body_bottom">How do you want to proceed for the scanned dose?</string>
    <string name="patient_checkout_base_exclusion_continue">Partner Bill</string>
    <string name="patient_checkout_base_exclusion_neutral">Self-Pay</string>
    <string name="patient_checkout_base_exclusion_neutral_fmt">Self-Pay : $%.2f</string>
    <string name="patient_checkout_base_exclusion_cancel">Remove </string>
    <string name="dialog_route_required_title">Route Required</string>
    <string name="dialog_route_required_subtitle">Select the administration route for:</string>
    <string name="intramuscular">Intramuscular</string>
    <string name="subcutaneous">Subcutaneous</string>
    <string name="dialog_duplicate_rsv_title">Confirm 2 Doses of this Product</string>
    <string name="dialog_duplicate_rsv_subtitle">200mg are recommended for immunocompromised patients.</string>
    <string name="dialog_duplicate_rsv_billing_message">VaxCare cannot bill for these doses.</string>
    <string name="dialog_duplicate_rsv_billing_prompt">How would you like to continue?</string>
</resources>