<?xml version="1.0" encoding="utf-8"?><!--***********************************************************************************************
  * Copyright VaxCare (c) 2020.                                                                   *
  ***********************************************************************************************-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/dp_42"
    android:layout_marginEnd="@dimen/dp_42"
    android:orientation="vertical">

    <TextView
        android:id="@+id/scanned_dose_issue_header"
        style="@style/H6BoldBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_36"
        android:text="@string/scanned_dose_issue_header" />

    <TextView
        android:id="@+id/scanned_dose_issue_body"
        style="@style/H6RegBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_26"
        android:text="@string/scanned_dose_issue_body" />

    <LinearLayout
        android:id="@+id/scanned_dose_age_range_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_60"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scanned_dose_age_range_header"
            style="@style/H7BoldBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scanned_dose_age_issue_header" />

        <TextView
            android:id="@+id/scanned_dose_age_range_body"
            style="@style/H7RegBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/scanned_dose_age_issue_body" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scanned_dose_expired_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_60"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scanned_dose_expired_header"
            style="@style/H7BoldBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scanned_dose_expired_header" />

        <TextView
            android:id="@+id/scanned_dose_expired_body"
            style="@style/H7RegBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/scanned_dose_expired_body" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scanned_dose_not_flu_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_60"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scanned_dose_not_flu_header"
            style="@style/H7BoldBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scanned_dose_not_flu_header" />

        <TextView
            android:id="@+id/scanned_dose_not_flu_body"
            style="@style/H7RegBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/scanned_dose_not_flu_body" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scanned_dose_multiple_entries_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_60"
        android:orientation="vertical">

        <TextView
            android:id="@+id/scanned_dose_exist_header"
            style="@style/H7BoldBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scanned_dose_multiple_entries_header" />

        <TextView
            android:id="@+id/scanned_dose_exist_body"
            style="@style/H7RegBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/scanned_dose_multiple_entries_body" />
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_38"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_keep_dose"
        style="@style/PrimaryPurpleButton"
        android:layout_width="@dimen/dp_400"
        android:layout_height="@dimen/dp_98"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/scanned_dose_issue_keep_dose" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_remove_dose"
        style="@style/PrimaryGrayButton"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginBottom="@dimen/dp_50"
        android:layout_width="@dimen/dp_400"
        android:layout_height="@dimen/dp_98"
        android:layout_gravity="center_horizontal"
        android:text="@string/scanned_dose_issue_remove_dose" />

</LinearLayout>