<?xml version="1.0" encoding="utf-8"?>
<!--***********************************************************************************************
  * Copyright VaxCare (c) 2024.                                                                   *
  ***********************************************************************************************-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/dp_42"
    android:paddingVertical="24dp"
    android:paddingHorizontal="8dp">

    <TextView
        android:id="@+id/textView_title"
        style="@style/H6BoldBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_duplicate_rsv_title"
        android:textSize="@dimen/sp_35"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_subtitle"
        style="@style/H6RegBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_duplicate_rsv_subtitle"
        android:textSize="@dimen/sp_30"
        app:layout_constraintTop_toBottomOf="@id/textView_title" />

    <TextView
        android:id="@+id/textView_billingMessage"
        style="@style/H6BoldBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/dialog_duplicate_rsv_billing_message"
        app:layout_constraintTop_toBottomOf="@id/textView_subtitle" />

    <TextView
        android:id="@+id/textView_billingPrompt"
        style="@style/H6RegBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_duplicate_rsv_billing_prompt"
        android:textSize="@dimen/sp_30"
        app:layout_constraintTop_toBottomOf="@id/textView_billingMessage" />

    <Button
        android:id="@+id/button_partnerBill"
        style="@style/PrimaryPurpleButton"
        android:layout_width="@dimen/dp_450"
        android:layout_height="@dimen/dp_105"
        android:layout_marginTop="34dp"
        android:text="@string/patient_checkout_base_exclusion_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_billingPrompt" />

    <Button
        android:id="@+id/button_selfPay"
        style="@style/PrimaryPurpleButton"
        android:layout_width="@dimen/dp_450"
        android:layout_height="@dimen/dp_105"
        android:text="@string/patient_checkout_base_exclusion_neutral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_partnerBill" />

    <Button
        android:id="@+id/button_keepDose"
        style="@style/PrimaryPurpleButton"
        android:layout_width="@dimen/dp_450"
        android:layout_height="@dimen/dp_105"
        android:layout_marginTop="34dp"
        android:text="@string/scanned_dose_issue_keep_dose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_selfPay"
        android:visibility="gone" />

    <Button
        android:id="@+id/button_removeDose"
        style="@style/PrimaryGrayButton"
        android:layout_width="@dimen/dp_450"
        android:layout_height="@dimen/dp_105"
        android:text="@string/patient_checkout_remove_dose"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_keepDose" />

</androidx.constraintlayout.widget.ConstraintLayout>